<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/paddingHorizontal_main"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/screen_title"
            style="@style/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/marginVertical_editText"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginBottom_editText"
                android:hint="@string/editText_firstName" />

            <EditText
                android:id="@+id/edit_text_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginBottom_editText"
                android:hint="@string/editText_login" />

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginBottom_editText"
                android:inputType="textPassword"
                android:hint="@string/editText_password" />

            <EditText
                android:id="@+id/edit_text_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/editText_repeatPassword"
                android:inputType="textPassword" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginBottom_signMainBtn"
            android:text="@string/sign_btn_signUp" />

        <TextView
            android:id="@+id/btn_goToSignIn"
            style="@style/signBtnGoTo"
            android:text="@string/sign_btn_signIn" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>