<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".manager.ManagerChangeWorker">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/paddingHorizontal_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_container">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/manager_changeWorker_title_marginBottom"
            android:text="Изменение монет и корон"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/manager_changeWorker_editText_marginBottom">

            <EditText
                android:id="@+id/edit_text_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/manager_changeWorker_editTexts_gap"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/manager_changeWorker_editText_coin_hint" />

            <EditText
                android:id="@+id/edit_text_crown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/manager_changeWorker_editText_crown_hint" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_changeWorkerNumbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/manager_changeWorker_changeButton_text" />

        <Button
            android:id="@+id/btn_goBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/gray"
            android:text="@string/manager_changeWorker_goBackButton_text"
            android:textColor="@color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_makeManagerFromWorker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/manager_change_worker_text_makeManager"
        android:text="Сделать менеджером"
        android:layout_marginHorizontal="@dimen/paddingHorizontal_main"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>